<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="56dp" />

    <ImageView android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_24_back"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.01"
        android:text="@string/angry_girls"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/iv_back" />

    <ImageView android:id="@+id/ic_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/share_button"
        android:src="@drawable/ic_24_share"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/iv_download" />

    <ImageView android:id="@+id/iv_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/download_button"
        android:src="@drawable/ic_24_donwload"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView android:id="@+id/iv_fullscreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/ic_24_pine_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        tools:ignore="ContentDescription" />

    <ImageView android:id="@+id/like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/like_button"
        android:elevation="2dp"
        android:src="@drawable/fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>