<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline android:id="@+id/action_bar_guideline_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="?attr/actionBarSize" />

    <androidx.constraintlayout.widget.Guideline android:id="@+id/support_profile_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="84dp" />

    <ImageView android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_24_back"
        app:layout_constraintBottom_toBottomOf="@id/action_bar_guideline_profile"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_small"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="@integer/letter_spacing_normal"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="@id/action_bar_guideline_profile"
        app:layout_constraintStart_toEndOf="@+id/iv_back" />

    <ImageView android:id="@+id/iv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:contentDescription="@string/logout_button"
        android:src="@drawable/ic_24_log_out"
        app:layout_constraintBottom_toBottomOf="@id/action_bar_guideline_profile"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView android:id="@+id/iv_profile_photo"
        android:layout_width="@dimen/profile_photo_size"
        android:layout_height="@dimen/profile_photo_size"
        android:layout_marginTop="@dimen/margin_extra"
        android:background="@drawable/round_image"
        android:contentDescription="@string/profile_photo"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar_guideline_profile" />

    <TextView android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_photo"
        tools:text="Cute Girl" />

    <TextView android:id="@+id/tv_profile_name"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_extra"
        android:layout_marginTop="@dimen/margin_normal"
        android:letterSpacing="@integer/letter_spacing_big"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="@id/support_profile_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
        tools:text="Shalopay1337" />

    <TextView android:id="@+id/tv_email"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_extra"
        android:layout_marginTop="@dimen/margin_normal"
        android:letterSpacing="@integer/letter_spacing_big"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="@id/support_profile_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name"
        tools:text="cutegirl@email.com" />

    <ImageView android:id="@+id/iv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile"
        android:src="@drawable/ic_24_profile"
        app:layout_constraintBottom_toBottomOf="@id/tv_profile_name"
        app:layout_constraintStart_toStartOf="@id/support_profile_guideline" />

    <ImageView android:id="@+id/iv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/email"
        android:src="@drawable/ic_24_mail"
        app:layout_constraintBottom_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="@id/support_profile_guideline" />


</androidx.constraintlayout.widget.ConstraintLayout>